lab2: jwt auth
